fix env to server
