# node/src/app/controllers/MonitorController.js
@@ -19,26 +19,12 @@ class MonitorController {
             return res.status(400).send('Something broke!');
         }
     }
-    async getAllMonitor(req, res, next){
-        try{
-            const operation = await db.hostModel.findAll({include: [ { model: db.monitorModel, as: 'results' }] })
-            if(!operation){
-                return res.status(404).send('Nenhum monitor encontrado')
-            }else{
-                return res.status(200).json(operation)
-            }            
-        }catch(e){
-                console.log(e)
-                return res.sendStatus(400);
-            }
-        }
- 
     async getMonitortById(req, res, next){   
         try{
             const id  = req.params.id; 
 
             let operation 
-            id ? operation = await db.hostModel.findOne({where:{ID: id}, include: [ { model: db.monitorModel, as: 'results' }] }) : operation = await db.hostModel.findOne({include: [ { model: db.monitorModel, as: 'results' }] })
+            id ? operation = await db.hostModel.findOne({where:{id: id}, include: [ { model: db.monitorModel, as: 'results' }] }) : operation = await db.hostModel.findOne({include: [ { model: db.monitorModel, as: 'results' }] })
 
             if(!operation){
                 return res.status(404).send('Nenhum monitor encontrado')
@@ -52,15 +38,16 @@ class MonitorController {
         }
     async addMonitor(req, res, next){
         try {
-            const {name, protocol, domain, path} = req.body;
-            const operation = await db.monitorModel.create({name:name, protocol:protocol, domain:domain, path: path})
+            const {name, url, statusCod, status, timeResponse, monitorDate, hostId} = req.body;
+
+            const operation = await db.monitorModel.create({name:name, url:url, statusCod:statusCod, status:status, timeResponse:timeResponse, monitorDate:monitorDate, hostId:hostId})
             if(!operation){
-                return res.status(501).send('Falha na operação')
+                return res.status(500).send('Falha na operação')
             }else{
-                return res.status(200).json(operation)
+                return res.status(201).json(operation)
             }
         }catch(err) {
-           return res.sendStatus(400)
+           return res.sendStatus(404)
         };
     }
 }
