# node/src/app/routes/monitor.js
@@ -1,11 +1,11 @@
 const routes = require('express').Router();
 const validator = require('express-joi-validation').createValidator({})
 
-const MonitorController = require(__dirname + '/../../app/controllers/MonitorController')
 const schemas = require(__dirname + '/../schemas/schemas')
+const MonitorController = require(__dirname + '/../../app/controllers/MonitorController')
 
-routes.get("/monitor", MonitorController.getAllMonitor);    
+   
 routes.get("/monitor/:id", validator.params(schemas.get), MonitorController.getMonitortById);    
-routes.post("/monitor", validator.body(schemas.post), MonitorController.addMonitor);    
+routes.post("/monitor", validator.body(schemas.monitor), MonitorController.addMonitor);    
 
 module.exports = routes;
